2009-10-14  David Capello  <davidcapello@gmail.com>

	* src/core/app.h (IAppHook, AppEvent): Added IAppHook interface
	for a cleaner event/hook interface.

	* src/core/app.cpp (Option): Converted to a class.

2009-10-08  David Capello  <davidcapello@gmail.com>

	* src/modules/tools.cpp (tool_marker): Modified marquee tooltip.
	Fixed bug #2874453 (thanks to Philippe Michael Groarke).

	* src/core/dirs.cpp (filename_in_datadir): Modified folders to
	load data on Mac OS X platform (thanks to Trent Gamblin).

	* Completelly refactored all the commands related stuff. This is
	the beginning to implement macro recording.

2009-09-03  David Capello  <davidcapello@gmail.com>

	* Version 0.7.2 released.

	* src/commands/cmd_close_file.cpp (close_current_sprite): Fixed
	bug #2847210: "Save" button when close a modified file was not working.

2009-08-10  David A. Capello  <davidcapello@gmail.com>

	* Version 0.7.1 released.

2009-08-09  David A. Capello  <davidcapello@gmail.com>

	* src/dialogs/filesel.cpp (ase_file_selector): Fixed a bug where
	new sprites where saved with lower case file names in Windows.

	* src/jinete/jentry.cpp (entry_msg_proc): Process Windows
	shortcuts to cut/paste (Ctrl+X, Ctrl+C, Ctrl+V).

	* src/jinete/jclipboard.cpp: Added support for Windows clipboard.

2009-08-04  David A. Capello  <davidcapello@gmail.com>

	* Version 0.7 released.

	* makefile.vc: Prepared to be compiled with VC++ 9.0 Express Edition.

2009-08-03  David A. Capello  <davidcapello@gmail.com>

	* Modified some error handling code from return-value to exceptions.

2009-08-02  David A. Capello  <davidcapello@gmail.com>

	* src/util/render.cpp (merge_zoomed_image): unified all
	merge_zoomed_image8/16/32 in one generic method (and fixed
	critical bugs).

2009-06-14  David A. Capello  <davidcapello@gmail.com>

	* src/commands/cmd_rotate_canvas.cpp: Added.

2009-06-11  David A. Capello  <davidcapello@gmail.com>

	* src/modules/gui.h (JWidgetPtr): Added to automatically delete